2000-02-18 Elliot Lee <sopwith@redhat.com>
	* gnome-dentry.c: Try just looking for KDE icons in various common places instead of using
	KDE_ICONDIR define.

Sun Jan 30 12:49:59 2000  George Lebl <jirka@5z.com>

	* gnome-ditem.c: fix two double free errors by applying a patch from
	  Peter Wainwright <prw@wainpr.demon.co.uk> and fix a small leak
	  in _unref

Thu Jan 20 00:07:37 2000  George Lebl <jirka@5z.com>

	* gnome-mime.[ch]: add a function gnome_uri_extract_filename,
	  which will take a single uri and return a newly allocated
	  string with a local filename or NULL if it's not file: and
	  local.  Use this in extract_filenames so that we actually
	  get real files for things that specify hostname too

	* gnome-ditem.c: use gnome_uri_extract_filename to test for
	  something being a local file and use it to extract the filename
	  itself.  If we actually append ".directory" and read the file,
	  stat it again to get the correct mtime.  Store full path in
	  location.  Make sure the type is "Directory" if and only if
	  the loaded file is a ".directory".  Recognize "<dir>/.directory"
	  as a directory file as well.  Add _() around the g_warning
	  messages.  Fix .order file reading by opening the right file.

Tue Jan 18 00:30:56 2000  George Lebl <jirka@5z.com>

	* gnome-util.c: (g_file_test) make the tests work sanely again.
	  This had been changed to test an and of the conditions which
	  doesn't make sense as something can never be a dir, a regular
	  file and a link at the same time.  So it now agains properly
	  tests an OR of the conditions, which also fixes
	  gnome-pixmap-entry and anything else that used the function.

Mon Jan 17 14:21:09 2000  George Lebl <jirka@5z.com>

	* gnome-ditem.c: test for gnome-terminal's existence and fall back
	  to xterm otherwise

Sun Jan 16 02:43:14 2000  George Lebl <jirka@5z.com>

	* gnome-ditem.[ch]: Add a basic "Type" attribute to the structure and
	  gnome_desktop_item_get_type/set_type accessors