@@ -1,3 +1,8 @@
+2000-02-24  Miguel de Icaza  <miguel@nuclecu.unam.mx>
+
+	* gnome-util.c (g_concat_dir_and_file): dir or file being NULL is
+	an error.
+
 2000-02-18 Elliot Lee <sopwith@redhat.com>
 	* gnome-dentry.c: Try just looking for KDE icons in various common places instead of using
 	KDE_ICONDIR define.
